{
    "name": "InputControls",
    "maps": [
        {
            "name": "MainMap",
            "id": "708df5e3-0336-448c-9429-11eccabd2d0e",
            "actions": [
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "1bb2e94d-e14a-45a4-ae34-00d07d567223",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6c0afd79-7a5b-4caa-b02e-28e391a4273a",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24f0da90-9d9e-47b7-a006-92afac32189d",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3183015b-07e3-430b-9f51-c39c03a724e1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}